--- a/public/locales/en/home.json
+++ b/public/locales/en/home.json
@@ -2,7 +2,7 @@
     "intro.h1.top": "Accelerate into",
     "intro.h1.main": "DeFi",
     "intro.button.contact": "Get in touch",
-    "intro.h2.text.1": "We are a team of visionaries and pioneers in the",
-    "intro.h2.text.2": "Decentralized Finance ecosystem. Leverage blockchain",
-    "intro.h2.text.3": "technology to advance smarter."
+    "intro.h2.text.1": "We are a team of visionaries and pioneers in the Decentralized Finance ecosystem. Leverage blockchain technology to advance smarter.",
+    "intro.h2.text.2": "",
+    "intro.h2.text.3": ""
 }
