--- a/public/locales/es/home.json
+++ b/public/locales/es/home.json
@@ -2,7 +2,7 @@
     "intro.h1.top": "Líderes en",
     "intro.h1.main": "Estrategia DeFi",
     "intro.button.contact": "Contacto",
-    "intro.h2.text.1": "Orientación especializada en Finanzas Descentralizadas",
-    "intro.h2.text.2": "(DeFi) para negocios de todos los tamaños",
-    "intro.h2.text.3": "de todas las regiones del mundo."
+    "intro.h2.text.1": "Orientación especializada en Finanzas Descentralizadas (DeFi) para negocios de todos los tamaños de todas las regiones del mundo.",
+    "intro.h2.text.2": "",
+    "intro.h2.text.3": ""
 }
