--- a/public/locales/es/home.json
+++ b/public/locales/es/home.json
@@ -4,5 +4,7 @@
     "intro.button.contact": "Contacto",
     "intro.h2.text.1": "Orientación especializada en Finanzas Descentralizadas (DeFi) para negocios de todos los tamaños de todas las regiones del mundo.",
     "intro.h2.text.2": "",
-    "intro.h2.text.3": ""
+    "intro.h2.text.3": "",
+    "head.og.description": "Orientación especializada en Finanzas Descentralizadas (DeFi) para negocios de todos los tamaños de todas las regiones del mundo.",
+    "head.og.title": "Aufacicenta | Líderes en Estrategia DeFi"
 }
