--- a/public/locales/en/home.json
+++ b/public/locales/en/home.json
@@ -6,6 +6,5 @@
   "intro.h2.text.2": "",
   "intro.h2.text.3": "",
   "head.og.description": "We are a team of visionaries and pioneers in the Decentralized Finance ecosystem. Leverage blockchain technology to advance smarter.",
-  "head.og.title": "Aufacicenta | Accelerate Into DeFi",
-  "sidebar.item.real-estate": "Real Estate"
+  "head.og.title": "Aufacicenta | Accelerate Into DeFi"
 }
