--- a/app/public/locales/es/common.json
+++ b/app/public/locales/es/common.json
@@ -1,1 +1,9 @@
-{}
+{
+    "navbar.businessCampaigns": "Sala de Inversión",
+    "navbar.businessCampaigns.map": "Mapa",
+    "navbar.businessCampaigns.grid": "Lista",
+    "navbar.businessCampaigns.table": "Tabla",
+    "navbar.howItWorks": "Cómo Funciona",
+    "navbar.apply": "Accede a Capital",
+    "navbar.logout": "Cerrar Sesión"
+}
