chore: translates sign up active session

--- a/app/public/locales/es/a.json
+++ b/app/public/locales/es/a.json
@@ -1,7 +1,11 @@
 {
   "signUp.form.title": "Inicia Sesión sin Contraseña",
   "signUp.form.description": "Enviaremos un correo a tu bandeja de entrada con las instrucciones.",
-  "signUp.footer.slogan": "Banco Satoshi ∞ Tu Banco de Inversión y Desarrollo, con Bitcoin.",
+  "signUp.footer.slogan": "Banco Satoshi ∞ Tu Banco de Inversión y Desarrollo, con Bitcoin",
   "authEmailForm.emailLabel": "Correo Electrónico",
-  "authEmailForm.button": "Ingresar"
+  "authEmailForm.button": "Ingresar",
+  "signUp.activeSession.title": "Ya has iniciado sesión",
+  "signUp.activeSession.description": "Si no es tu cuenta, cambia de cuenta o navega a tu panel de control.",
+  "signUp.activeSession.dashboard-cta": "Ir a panel de control",
+  "signUp.activeSession.signout-cta": "Cambiar de cuenta"
 }
