chore: translates BusinessHeader

--- a/app/public/locales/en/campaign.json
+++ b/app/public/locales/en/campaign.json
@@ -13,5 +13,8 @@
   "investNowWidget.warnings.volatility.title": "Volatility 0",
   "investNowWidget.warnings.volatility.description": "Your deposit is secured by our <strong>Stable Coin Escrow</strong> until the minimum investment goal is met.",
   "investNowWidget.warnings.maturityDate.title": "Maturity Date",
-  "investNowWidget.warnings.maturityDate.description": "For example, if you invest 10 SAT, {{name}} commits to return {{investmentMultiple}} SAT along the contract lifetime: <strong>{{maturityDate}}</strong>."
+  "investNowWidget.warnings.maturityDate.description": "For example, if you invest 10 SAT, {{name}} commits to return {{investmentMultiple}} SAT along the contract lifetime: <strong>{{maturityDate}}</strong>.",
+  "businessDetails.tab.investmentOpportunity": "Investment Opportunity",
+  "businessDetails.tab.dataRoom": "Data Room",
+  "businessHeader.social.title": "Social"
 }
