--- a/app/public/locales/en/campaign.json
+++ b/app/public/locales/en/campaign.json
@@ -16,5 +16,7 @@
   "investNowWidget.warnings.maturityDate.description": "For example, if you invest 10 SAT, {{name}} commits to return {{investmentMultiple}} SAT along the contract lifetime: <strong>{{maturityDate}}</strong>.",
   "businessDetails.tab.investmentOpportunity": "Investment Opportunity",
   "businessDetails.tab.dataRoom": "Data Room",
-  "businessHeader.social.title": "Social"
+  "businessHeader.social.title": "Social",
+  "fundingProgressBar.totalBitcoinCollected.title": "BTC Funded",
+  "fundingProgressBar.totalBitcoinCollected.description": "collected"
 }
