chore: i18n translations of the whole site #30 #31 (#52)
* feat: translates Home

* feat: translates NavBar

* chore: translations for i pages, WIP

* chore: translates campaigns grid page

* chore: translates sign in form

* fix: wrong toast when wrong email

* chore: translates sign up active session

* chore: translates InvestNowWidget

* chore: translates tooltips

* chore: translates BusinessHeader

* chore: translates FundingProgressBar

* chore: removes unused import

--- a/app/public/locales/en/common.json
+++ b/app/public/locales/en/common.json
@@ -1,3 +1,11 @@
 {
-  "sidebar.item.real-estate": "Real Estate"
+  "navbar.businessCampaigns": "Investment Opportunities",
+  "navbar.businessCampaigns.map": "Map",
+  "navbar.businessCampaigns.grid": "Grid",
+  "navbar.businessCampaigns.table": "Table",
+  "navbar.howItWorks": "How It Works",
+  "navbar.apply": "Apply to Funding",
+  "navbar.logout": "Sign Out",
+  "privacyNotice": "Privacy Notice",
+  "termsAndConditions": "Terms & Conditions"
 }
