--- a/app/public/locales/es/home.json
+++ b/app/public/locales/es/home.json
@@ -1,10 +1,10 @@
 {
-  "intro.h1.top": "Líderes en",
-  "intro.h1.main": "Estrategia DeFi",
-  "intro.button.contact": "Contacto",
-  "intro.h2.text.1": "Orientación especializada en Finanzas Descentralizadas (DeFi) para negocios de todos los tamaños de todas las regiones del mundo.",
-  "intro.h2.text.2": "",
-  "intro.h2.text.3": "",
-  "head.og.description": "Orientación especializada en Finanzas Descentralizadas (DeFi) para negocios de todos los tamaños de todas las regiones del mundo.",
-  "head.og.title": "Aufacicenta | Líderes en Estrategia DeFi"
+  "intro.h1.top": "Invierte en Negocios",
+  "intro.h1.main": "con Bitcoin",
+  "intro.asInvestor.title": "Como inversionista",
+  "intro.asInvestor.description": "Diversifica tu portafolio con ingresos pasivos<br /><strong>desde 1 SAT</strong>.",
+  "intro.asBusinessOwner.title": "Como empresarix",
+  "intro.asBusinessOwner.description": "Accede a capital de inversión global<br />y ejecuta tus ideas.",
+  "intro.bottomBanner.welcome": "Bienvenido a tu banco de inversión y desarrollo,<br />con Bitcoin.",
+  "intro.bottomBanner.cta": "Visita la Sala de Inversión"
 }
