chore: translates Sign In cta

--- a/app/public/locales/en/common.json
+++ b/app/public/locales/en/common.json
@@ -6,6 +6,7 @@
   "navbar.howItWorks": "How It Works",
   "navbar.apply": "Apply to Funding",
   "navbar.logout": "Sign Out",
+  "navbar.signIn": "Sign In",
   "privacyNotice": "Privacy Notice",
   "termsAndConditions": "Terms & Conditions"
 }
