--- a/app/public/locales/es/common.json
+++ b/app/public/locales/es/common.json
@@ -6,6 +6,7 @@
   "navbar.howItWorks": "Cómo Funciona",
   "navbar.apply": "Accede a Capital",
   "navbar.logout": "Cerrar Sesión",
+  "navbar.signIn": "Iniciar Sesión",
   "privacyNotice": "Aviso de Privacidad",
   "termsAndConditions": "Términos y Condiciones"
 }
