chore: translates BusinessCampaignCard

--- a/app/public/locales/en/i.json
+++ b/app/public/locales/en/i.json
@@ -3,5 +3,10 @@
   "grid.recentCampaigns.description": "Discover new investment opportunities, and diversify your portfolio",
   "grid.banner.title": "Explore & Invest with Bitcoin",
   "grid.banner.description": "Discover passive income investments in businesses worldwide.",
-  "grid.banner.cta": "Sign Up"
+  "grid.banner.cta": "Sign Up",
+  "businessCampaignCard.funded": "Funded",
+  "businessCampaignCard.investors": "Investor",
+  "businessCampaignCard.investors_plural": "Investors",
+  "businessCampaignCard.investmentMultiple": "Investment Multiple",
+  "businessCampaignCard.daysLeft": "Days Left"
 }
