chore: total investors count translation

--- a/app/public/locales/en/campaign.json
+++ b/app/public/locales/en/campaign.json
@@ -7,7 +7,8 @@
   "investNowWidget.cta.error": "Something went wrong, please try again.",
   "investNowWidget.terms.investmentMultiple.description": "Investment Multiple",
   "investNowWidget.terms.totalFiatFunded.description": "Invested",
-  "investNowWidget.terms.investors.description": "Investors",
+  "investNowWidget.terms.investors.description": "Investor",
+  "investNowWidget.terms.investors.description_plural": "Investors",
   "investNowWidget.terms.daysLeft.description": "Days left",
   "investNowWidget.terms.daysLeft.title": "days",
   "investNowWidget.warnings.volatility.title": "Volatility 0",
