--- a/app/public/locales/es/campaign.json
+++ b/app/public/locales/es/campaign.json
@@ -7,7 +7,8 @@
   "investNowWidget.cta.error": "Algo salió mal, intenta de nuevo",
   "investNowWidget.terms.investmentMultiple.description": "Retorno sobre tu inversión",
   "investNowWidget.terms.totalFiatFunded.description": "Invertidos hasta hoy",
-  "investNowWidget.terms.investors.description": "Inversionistas",
+  "investNowWidget.terms.investors.description": "Inversionista",
+  "investNowWidget.terms.investors.description_plural": "Inversionistas",
   "investNowWidget.terms.daysLeft.description": "Restantes para invertir",
   "investNowWidget.terms.daysLeft.title": "días",
   "investNowWidget.warnings.volatility.title": "Volatilidad 0",
