--- a/app/public/locales/en/common.json
+++ b/app/public/locales/en/common.json
@@ -8,5 +8,10 @@
   "navbar.logout": "Sign Out",
   "navbar.signIn": "Sign In",
   "privacyNotice": "Privacy Notice",
-  "termsAndConditions": "Terms & Conditions"
+  "termsAndConditions": "Terms & Conditions",
+  "checkoutContextController.error.getCheckoutURL": "We can't generate the BTC checkout page right now. Please try again.",
+  "authContextController.success.signInConfirmation": "Click on the link in your inbox to sign in.",
+  "authContextController.success.signInConfirmation.title": "Check your inbox",
+  "toast.cta.dismiss": "Dismiss",
+  "authContextController.error.signIn": "Something went wrong while sending your sign-in link. Please try again."
 }
