--- a/app/public/locales/en/common.json
+++ b/app/public/locales/en/common.json
@@ -4,7 +4,7 @@
   "navbar.businessCampaigns.grid": "Grid",
   "navbar.businessCampaigns.table": "Table",
   "navbar.howItWorks": "How It Works",
-  "navbar.apply": "Apply for Funding",
+  "navbar.apply": "Get Funded",
   "navbar.logout": "Sign Out",
   "navbar.signIn": "Sign In",
   "privacyNotice": "Privacy Notice",
